[project]
name = "multi-calf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium[mujoco]==0.29.0",
    "matplotlib==3.9.2",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "pygame==2.6.1",
    "pyparsing==3.2.0",
    "pyqt5==5.15.11",
    "pyqt5-qt5==5.15.15",
    "pyqt5-sip==12.15.0",
    "scipy==1.14.1",
    "six==1.16.0",
    "stable-baselines3==2.3.2",
    "sympy==1.13.1",
    "torch==2.5.1",
    "mlflow==2.18.0",
    "opencv-python==4.9.0.80",
    "tyro>=0.9.17",
    "black>=25.1.0",
    "imageio[ffmpeg]>=2.37.0",
    "loguru>=0.7.3",
]

[tool.poetry]
packages = [
    { include = "src" },
    { include = "run" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

